--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
       <h1>Password Generator</h1>
     </header>
     <div class="card">
-      <div class="card-header">
-        <h2>Generate a Password</h2>
-      </div>
       <div class="card-body">
         <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
       </div>
@@ -26,7 +23,7 @@
           <button id="generate" class="btn">Generate Password</button>
         </div>
         <div class="card-footer">
-          <button onclick="copyContent()" id="copy-to-clipboard" class="btn">Copy to clipboard</button>
+          <button onclick="copyToClipboard('password')" id="copy-to-clipboard" class="btn">Copy to Clipboard</button>
         </div>
       </div>
     </div>
