adding custom ui and design

--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="description" content="Password Generator">
   <title>Password Generator</title>
+  <link rel="icon" type="image/x-icon" href="./images/favicon.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
   <div class="wrapper">
     <header>
-      <h1>Password Generator</h1>
+      <h1>P455W0RD G3N3R4T0R</h1>
     </header>
     <div class="card">
+      <div class="password-logo">
+        <img src="./images/password-logo.png" alt="Password logo">
+      </div>
       <div class="card-body">
         <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
       </div>
@@ -27,6 +35,10 @@
         </div>
       </div>
     </div>
+    <footer>
+      <p>©2022 - M4D3 8Y R4F D! M4RT!N0</p>
+      <a href="https://www.vecteezy.com/free-vector/password-icon">Password Icon Vectors by Vecteezy</a>
+    </footer>
   </div>
   <script src="./js/script.js"></script>
 </body>
