refactoring copy-to-clip-board function, now works also on mobile

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <button id="generate" class="btn">Generate Password</button>
         </div>
         <div class="card-footer">
-          <button onclick="copyToClipboard('password')" id="copy-to-clipboard" class="btn">Copy to Clipboard</button>
+          <button onclick="copyToClipboard()" class="btn">Copy to Clipboard</button>
         </div>
       </div>
     </div>
